# kalendarium

./: .gitignore  README.md  app.spec  pyproject.toml  requirements.dev.txt  requirements.prod.txt
src/: main.py
src/config/: config.json  config.json.example  config.py
src/constants/: app_constants.py  weatherapi.py
src/gui/: eventform.py  home.py  main_window.py  overview_day.py  overview_month.py  setting.py  template.py
src/helpers/: devtools.py  style_sheet.py  utility.py  worker.py
src/models/: database..sqlite3.populated-example  database_context.py  databasesqlite3  event.py  repository_events.py  repository_weatherforecasts.py  sample.sql  weatherapi_response.py  weatherforecast.py
src/resources/i18n/: general.en_US.qm  general.en_US.ts  general.pt_BR.qm  general.pt_BR.ts
src/resources/qss/dark/: day_cell_widget.qss  monthly_widget.qss  template_interface.qss
src/resources/qss/light/: day_cell_widget.qss  monthly_widget.qss  template_interface.qss
src/signals/: signal_bus.py
src/widgets/: clickable_text.py  day_cell.py  event_card.py  monthly_calendar.py  palette.py  setting_lat_long.py  setting_lineedit.py  setting_palette.py  weather_forecast.py
